python-web-server/tests/http/requests/invalid/004.py
from web_server.errors import InvalidHTTPVersion

request = InvalidHTTPVersion
